formver.compiler-plugin/testData/diagnostics/uniqueness_checker/throw.kt
// FULL_JDK
// UNIQUE_CHECK_ONLY

import org.jetbrains.kotlin.formver.plugin.Borrowed
import org.jetbrains.kotlin.formver.plugin.Unique

class B {
    var y: @Unique Exception = Exception()
}

// Throwing locals

fun `throw shared`(a: Throwable) {
    throw a
}

fun `throw borrowed`(a: @Borrowed Throwable) {
    <!INVALID_LEAKED_UNIQUENESS!>throw <!LOCALITY_MISMATCH!>a<!><!>
}

fun `throw unique`(a: @Unique Throwable) {
    throw a
}

fun `throw unique-borrowed`(a: @Unique @Borrowed Throwable) {
    <!INVALID_LEAKED_UNIQUENESS!>throw <!LOCALITY_MISMATCH!>a<!><!>
}

// Throwing subproperties

fun `throw shared subproperty`(a: B) {
    throw a.y
}

fun `throw borrowed subproperty`(a: @Borrowed B) {
    <!INVALID_LEAKED_UNIQUENESS!>throw a.y<!>
}

fun `throw unique subproperty`(a: @Unique B) {
    throw a.y
}

fun `throw unique-borrowed subproperty`(a: @Unique @Borrowed B) {
    <!INVALID_LEAKED_UNIQUENESS!>throw a.y<!>
}
